# activity-tracker-desktop

./: main.py  pyproject.toml
activity_tracker/: connection.py
activity_tracker/service/: ActivityTracker.py  AddActivity.py  AddFriend.py  Dashboard.py  DeleteFriend.py  FriendList.py  ListWidget.py  LoginForm.py  RegisterForm.py  TrainList.py
activity_tracker/windows/: add_activity.py  add_friend.py  dashboard_window.py  delete_friend.py  friend_table.py  login_window.py  main_window.py  register_window.py  train_table.py
ui_models/: add_activity.ui  add_friend.ui  dashboard.ui  delete_friend.ui  friend_invited.ui  friend_table.ui  login.ui  main.ui  register.ui  train_table.ui
