[tool.poetry]
name = "activity-tracker"
version = "0.1.0"
description = ""
authors = ["Kirill Efimenko <vivichv9@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.3"
jwt = "^1.3.1"
pyqt6 = "^6.4.2"
pyside6 = "^6.8.0.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
